--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -12,6 +12,10 @@
     padding: 16px 30px;
     border-radius: 3px 3px 0 0;
 }
+
+.bt-addnew {
+    float: right;
+}
 /* .table-title {      
     padding-bottom: 15px;
     background: #435d7d;
